--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -4,7 +4,68 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="Homepage.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Homepage</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1 class="headerbar">Quiz App</h1>
+    </header>
+    <section class="box-border">
+      <h2>Question:</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non voluptatem
+        nostrum eius aliquid, voluptatibus ea inventore perferendis
+        exercitationem suscipit. Iusto?
+      </p>
+      <div class="button">
+        <button class="buttonstyle">Show Answer</button>
+      </div>
+      <ul class="boxes">
+        <li class="box1">Tag</li>
+        <li class="box2">Tag</li>
+        <li class="box3">Tag</li>
+        <li class="box4">Tag</li>
+      </ul>
+    </section>
+    <section class="box-border">
+      <h2>Question:</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non voluptatem
+        nostrum eius aliquid, voluptatibus ea inventore perferendis
+        exercitationem suscipit. Iusto?
+      </p>
+      <div class="button">
+        <button class="buttonstyle">Show Answer</button>
+        <ul class="boxes">
+          <li class="box1">Tag</li>
+          <li class="box2">Tag</li>
+          <li class="box3">Tag</li>
+          <li class="box4">Tag</li>
+        </ul>
+      </div>
+    </section>
+    <section class="box-border">
+      <h2>Question:</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non voluptatem
+        nostrum eius aliquid, voluptatibus ea inventore perferendis
+        exercitationem suscipit. Iusto?
+      </p>
+      <button class="buttonstyle">Show Answer</button>
+      <ul class="boxes">
+        <li class="box1">Tag</li>
+        <li class="box2">Tag</li>
+        <li class="box3">Tag</li>
+        <li class="box4">Tag</li>
+      </ul>
+    </section>
+  </body>
 </html>
