--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -134,6 +134,25 @@
       </ul>
     </section>
 
+    <footer>
+      <nav class="navbar">
+        
+          <svg class="FooterIcons" >
+            <path fill="currentColor" d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" />
+        </svg>
+        <svg class="FooterIcons">
+          <path fill="currentColor" d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z" />
+      </svg>
+      <svg class="FooterIcons">
+        <path fill="currentColor" d="M20.7,7C21.1,6.6 21.1,6 20.7,5.6L18.4,3.3C18,2.9 17.4,2.9 17,3.3L15.2,5.1L19,8.9M3,17.2V21H6.8L17.8,9.9L14.1,6.1L3,17.2M7,2V5H10V7H7V10H5V7H2V5H5V2H7Z" />
+    </svg>
+    <svg class="FooterIcons">
+      <path fill="currentColor" d="M15,5A2,2 0 0,1 17,7V23L10,20L3,23V7C3,5.89 3.9,5 5,5H15M9,1H19A2,2 0 0,1 21,3V19L19,18.13V3H7A2,2 0 0,1 9,1Z" />
+  </svg>
+        
+      </nav>
+    </footer>
+
    
   </body>
 </html>
